k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dfs-api
  namespace: distributed-file-system
  labels:
    app: dfs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dfs-api
  template:
    metadata:
      labels:
        app: dfs-api
    spec:
      containers:
        - name: dfs-api
          image: ishudevq/distributed-file-system:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: storage-volume
              mountPath: /app/storage_nodes
            - name: downloads-volume
              mountPath: /app/downloads
            - name: db-volume
              mountPath: /app/db

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: dfs-storage-pvc
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: dfs-downloads-pvc
        - name: db-volume
          persistentVolumeClaim:
            claimName: dfs-db-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dfs-repair-worker
  namespace: distributed-file-system
  labels:
    app: dfs-repair-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dfs-repair-worker
  template:
    metadata:
      labels:
        app: dfs-repair-worker
    spec:
      containers:
        - name: dfs-repair-worker
          image: ishudevq/distributed-file-system-worker:latest
          imagePullPolicy: IfNotPresent

          command:
            - celery
            - "-A"
            - app.workers.celery_app.celery_app
            - worker
            - "--loglevel=info"

          volumeMounts:
            - name: storage-volume
              mountPath: /app/storage_nodes
            - name: downloads-volume
              mountPath: /app/downloads
            - name: db-volume
              mountPath: /app/db

      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: dfs-storage-pvc
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: dfs-downloads-pvc
        - name: db-volume
          persistentVolumeClaim:
            claimName: dfs-db-pvc
