k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dfs-api-service
  namespace: distributed-file-system
spec:
  type: NodePort
  selector:
    app: dfs-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
